eventkit_cloud/ui/static/ui/app/components/auth/Login.css
.wholeDiv {
    width: 100%;
    height: 100%;
    background-color: black;
    margin-bottom: 0px;
}
.root {
    justify-content: space-around;
    display: flex;
    flex-wrap: wrap;
}
.paper {
    background-image: url('../../../images/topoBackground.jpg');
    background-repeat: repeat repeat;
    margin:  auto;
    padding: 60px;
    width: 100%;
    max-width: 500px;
}
.form {
    margin: 0 auto;
    width: 70%
}
.heading {
    width: 100%;
    font-size: 20px;
    font-weight: bold;
    color: white;
}
.enabledButton{
    margin-top: 30px;
    margin-left: auto;
}
.disabledButton{
    margin-top: 30px;
    margin-left: auto;
}
.disabledButton > div > button {
    background-color: #b4b7b8!important;
}
.enabledButton > div > button {
    background-color: #55ba63!important;
}
.fieldWrapper > input {
    background-color: rgba(179, 205, 224, .2)!important;
    font-size: 16px!important;
    width: 100%!important;
    height: 45px!important;
    margin-top: 15px!important;
    color: #e2e2e2!important;
    padding-left: 10px;
}

.fieldWrapper > svg {
    float: left!important;
    margin-top: 25px!important;
    height: 32px!important;
    width: 32px!important;
    color: #e2e2e2 !important;
    fill: #e2e2e2 !important;
}
.accountIcon > div >  div {
    color: #e2e2e2 !important;

}
.accountIcon > div {
    bottom:2px!important;
}

